Fix horizontal scrolls and send config to server every time the radio button is changed
git-svn-id: https://projects.iti.upv.es/svn/prhlt/software/casmacat-server-library/trunk@6857 8b0d7800-f05a-0410-912a-ed64b2e63916

--- a/server/web/css/index.css
+++ b/server/web/css/index.css
@@ -1,7 +1,7 @@
 * { margin:0; padding:0; margin-before:0; margin-after:0; }
 
 body {}
-#global { max-width: 900px; margin:0 auto; padding:25px; }
+#global { max-width: 850px; margin:0 auto; padding:25px; }
 
 button {
 	vertical-align: middle;
@@ -188,8 +188,8 @@ fieldset { border:1px solid #CCC; padding:1em; }
 #control-panel { margin-bottom:1em; }
 #options {
   clear:both;
-  overflow:auto;
-  overflow-y:hidden;
+  /*overflow:auto;
+  overflow-y:hidden;*/
 }
 
 label { font-weight:bold; }
